--- a/intro1.html
+++ b/intro1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>vDx</title>
+    <title>Start</title>
     <link rel="icon" href="./img/image.svg" type="image/x-icon">
     <style>
         body {
@@ -62,12 +62,12 @@
 </head>
 <body>
     <div class="supercell-container">
-        <a href="intro1.html" class="supercell-button">
+        <a href="intro.html" class="supercell-button">
             <span class="id-icon">vDx</span>
-            Empezar
+            vDx ID
         </a>
-        <a href="https://httml.vercel.app" class="supercell-action">
-            <img src="./img/icon.svg" alt="Action Icon">
+        <a href="/index.html" class="supercell-action">
+            <img src="./img/volver.svg" alt="Action Icon">
         </a>
     </div>
 </body>
