--- a/configuracion.html
+++ b/configuracion.html
@@ -1,1 +1,197 @@
-<h2>Proximamente</h2>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Configuración</title>
+    <link rel="icon" href="./img/settings.svg" type="image/x-icon">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            background-color: #f3f3f3;
+        }
+        .header {
+            background-color: #005cbf;
+            color: white;
+            padding: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+        .header img {
+            height: 30px;
+        }
+        .profile-container {
+            display: flex;
+            align-items: center;
+            padding: 20px;
+            background-color: white;
+            border-bottom: 1px solid #e0e0e0;
+        }
+        .profile-container img {
+            border-radius: 50%;
+            margin-right: 20px;
+        }
+        .profile-info {
+            flex: 1;
+        }
+        .profile-info .status {
+            color: green;
+            font-weight: bold;
+        }
+        .profile-info .name {
+            font-size: 1.5em;
+        }
+        .tabs {
+            display: flex;
+            background-color: white;
+            border-bottom: 1px solid #e0e0e0;
+        }
+        .tab {
+            flex: 1;
+            padding: 10px;
+            text-align: center;
+            cursor: pointer;
+        }
+        .tab.active {
+            border-bottom: 3px solid black;
+            font-weight: bold;
+        }
+        .settings {
+            padding: 20px;
+        }
+        .setting {
+            background-color: white;
+            padding: 15px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+        }
+        .setting span {
+            font-size: 1em;
+        }
+        .toggle-switch {
+            position: relative;
+            display: inline-block;
+            width: 40px;
+            height: 20px;
+        }
+        .toggle-switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            transition: .4s;
+            border-radius: 34px;
+        }
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 12px;
+            width: 12px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            transition: .4s;
+            border-radius: 50%;
+        }
+        input:checked + .slider {
+            background-color: #2196F3;
+        }
+        input:checked + .slider:before {
+            transform: translateX(20px);
+        }
+        .account-info {
+            background-color: white;
+            padding: 15px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+        }
+        .account-info .info {
+            margin-bottom: 10px;
+        }
+        .account-info .info span {
+            display: block;
+            font-size: 1em;
+        }
+        .account-info .info a {
+            color: #005cbf;
+            text-decoration: none;
+        }
+    </style>
+</head>
+<body>
+    <div class="header">
+        <div>
+            <a href="intro.html">
+                <img src="./img/volver.svg" alt="Volver">
+            </a>
+        </div>
+        <div>
+            <span>ID</span>
+            <span>AntNin26</span>
+        </div>
+        <div>
+            <a href="intro1.html">
+                <img src="./img/close.svg" alt="Cerrar">
+            </a>
+        </div>
+    </div>
+    <div class="tabs">
+        <div class="tab active">
+            <span>AJUSTES</span>
+        </div>
+        <div class="tab">
+            <span>SUSCRIPCIONES</span>
+        </div>
+    </div>
+    <div class="settings">
+        <div class="setting">
+            <span>Mostrar estado en línea</span>
+            <label class="toggle-switch">
+                <input type="checkbox" checked>
+                <span class="slider"></span>
+            </label>
+        </div>
+        <div class="setting">
+            <span>Recibir nuevas solicitudes de amistad</span>
+            <label class="toggle-switch">
+                <input type="checkbox" checked>
+                <span class="slider"></span>
+            </label>
+        </div>
+        <div class="account-info">
+            <div class="info">
+                <span>ID</span>
+                <span>#SC-VLLPUY28008</span>
+                <a href="#">CAMBIAR NOMBRE</a>
+            </div>
+            <div class="info">
+                <span>Sesión iniciada:</span>
+                <span>perezantolin2014@gmail.com</span>
+                <a href="#">CAMBIAR EMAIL</a>
+            </div>
+            <div class="info">
+                <a href="#">Cambiar de cuenta</a>
+            </div>
+            <div class="info">
+                <a href="#">Cerrar sesión</a>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
+
