--- a/intro.html
+++ b/intro.html
@@ -106,7 +106,7 @@
             <img src="./img/image.svg" alt="SUPERCELL ID">
         </div>
         <div>
-            <a href="/">
+            <a href="/intro1.html">
                 <img src="./img/close.svg" alt="Cerrar">
             </a>
         </div>
