Error in settings

--- a/configuracion.html
+++ b/configuracion.html
@@ -181,7 +181,7 @@
             </div>
             <div class="info">
                 <span>Sesión iniciada:</span>
-                <span>perezantolin2014@gmail.com</span>
+                <span>example@example.es</span>
                 <a href="#">CAMBIAR EMAIL</a>
             </div>
             <div class="info">
