Repair button My Friends in my games

--- a/my-games.html
+++ b/my-games.html
@@ -86,7 +86,7 @@
 <body>
     <div class="header">
         <div>
-            <img src="./img/volver.svg" alt="Volver">
+            <img src="./img/favicon.svg" alt="Volver">
         </div>
         <div>
             <span>ID</span>
@@ -112,8 +112,10 @@
     </div>
     <div class="tabs">
         <div class="tab">
+        <a href="intro.html">
             <img src="./img/friends.svg" alt="Amigos">
-            <div>AMIGOS</div>
+            <div>Amigos</div>
+            </a>
         </div>
         <div class="tab active">
             <img src="./img/games.svg" alt="Mis Juegos">
