Change id in my games and borrow mi id in my games

--- a/my-games.html
+++ b/my-games.html
@@ -89,10 +89,6 @@
             <img src="./img/favicon.svg" alt="Volver">
         </div>
         <div>
-            <span>ID</span>
-            <span>AntNin26</span>
-        </div>
-        <div>
             <a href="index.html">
                 <img src="./img/close.svg" alt="Cerrar">
             </a>
@@ -101,7 +97,7 @@
     <div class="profile-container">
         <img src="./img/3614f9671eb92af5ac9c1f97f8f1a004.jpg" alt="Perfil" width="60" height="60">
         <div class="profile-info">
-            <div class="name">AntNin26</div>
+            <div class="name">User</div>
             <div class="status">En línea</div>
         </div>
         <div>
