--- a/configuracion.html
+++ b/configuracion.html
@@ -142,7 +142,7 @@
         </div>
         <div>
             <span>ID</span>
-            <span>AntNin26</span>
+            <span>User</span>
         </div>
         <div>
             <a href="intro1.html">
