--- a/intro.html
+++ b/intro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SUPERCELL ID</title>
+    <title>vDx ID</title>
     <link rel="icon" href="./img/image.svg" type="image/x-icon">
     <style>
         body {
