--- a/intro.html
+++ b/intro.html
@@ -137,13 +137,14 @@
     <div class="friends-list">
         <div class="friend">
             <img src="./img/descarga.jpg" alt="Perfil" width="50" height="50">
-            <div class="info">
+             <div class="info">
                 <div>User2</div>
                 <div class="status">Desconectado</div>
             </div>
             <div>
                 <img src="./img/friends.svg" alt="Ver perfil" width="20" height="20">
                 <div>Ver Perfil</div>
+            </div>
             </div>
         </div>
     </div>
