--- a/my-games.html
+++ b/my-games.html
@@ -59,8 +59,8 @@
             margin: 0 auto 5px;
         }
         .tab.active {
+            background-color: #f0f0f0;
             font-weight: bold;
-            border-bottom: 3px solid #000;
         }
         .games-list {
             padding: 20px;
