Change in configuration id for webs

--- a/configuracion.html
+++ b/configuracion.html
@@ -175,9 +175,11 @@
         </div>
         <div class="account-info">
             <div class="info">
-                <span>ID</span>
-                <span>#SC-VLLPUY28008</span>
-                <a href="#">CAMBIAR NOMBRE</a>
+                <span>WEBS CREADAS</span>
+                <span>3</span>
+            <a href="intro1.html">
+                <a  href="https://webs.creadas.vercel.app" href="#">ENTRAR</a>
+            </a>
             </div>
             <div class="info">
                 <span>Sesión iniciada:</span>
