--- a/configuracion.html
+++ b/configuracion.html
@@ -178,7 +178,7 @@
                 <span>WEBS CREADAS</span>
                 <span>3</span>
             <a href="intro1.html">
-                <a  href="https://webs.creadas.vercel.app" href="#">ENTRAR</a>
+                <a  href="https://webs-anto.vercel.app" href="#">ENTRAR</a>
             </a>
             </div>
             <div class="info">
