Create new button in configuration and change or repo private for public

--- a/configuracion.html
+++ b/configuracion.html
@@ -172,13 +172,16 @@
                 <input type="checkbox" checked>
                 <span class="slider"></span>
             </label>
-        </div>
-        <div class="account-info">
-            <div class="info">
+            </div>
+            <div class="account-info">
+                <div class="info"> 
+                    <a href="https://github.com/antolinnin00/vDx-ID" href="#">Repo Github</a>
+                </div>
+                <div class="info">
                 <span>WEBS CREADAS</span>
                 <span>3</span>
             <a href="intro1.html">
-                <a  href="https://webs-anto.vercel.app" href="#">ENTRAR</a>
+                <a href="https://webs-anto.vercel.app" href="#">ENTRAR</a>
             </a>
             </div>
             <div class="info">
