Start Developer Web

--- a/configuracion.html
+++ b/configuracion.html
@@ -141,8 +141,7 @@
             </a>
         </div>
         <div>
-            <span>ID</span>
-            <span>User</span>
+            <h3>Developer Web</h3>
         </div>
         <div>
             <a href="intro1.html">
