--- a/intro.html
+++ b/intro.html
@@ -146,6 +146,16 @@
                 <div>Ver Perfil</div>
             </div>
             </div>
+            <div class="friend">
+                <img src="./img/3614f9671eb92af5ac9c1f97f8f1a004.jpg" alt="Perfil" width="50" height="50">
+                 <div class="info">
+                    <div>Dev</div>
+                    <div class="status">Conectado</div>
+                </div>
+                <div>
+                    <img src="./img/friends.svg" alt="Ver perfil" width="20" height="20">
+                    <div>Ver Perfil</div>
+                </div>
         </div>
     </div>
     <div class="add-friend">
