Create new user in intro and in configuration create new button with name is Repo Git to go to the repo

--- a/configuracion.html
+++ b/configuracion.html
@@ -171,9 +171,12 @@
             <label class="toggle-switch">
                 <input type="checkbox" checked>
                 <span class="slider"></span>
-            </label>
-        </div>
-        <div class="account-info">
+                </label>
+                </div>
+                <div class="account-info">
+            <div class="info">
+                <a href="https://github.com/antolinnin00/vDx-ID.git" href="#"><h3>Repo Git</h3></a>
+            </div>
             <div class="info">
                 <span>WEBS CREADAS</span>
                 <span>3</span>
