Create a Dev Rame

--- a/configuracion.html
+++ b/configuracion.html
@@ -141,8 +141,8 @@
             </a>
         </div>
         <div>
-            <span>ID</span>
-            <span>User</span>
+            
+            <span>Modo Dev</span>
         </div>
         <div>
             <a href="intro1.html">
