--- a/intro.html
+++ b/intro.html
@@ -105,6 +105,7 @@
         <div>
             <img src="./img/image.svg" alt="SUPERCELL ID">
         </div>
+        <span>Modo Dev</span>
         <div>
             <a href="/intro1.html">
                 <img src="./img/close.svg" alt="Cerrar">
